cargo-features = ["edition2024"]
[package]
name = "rust_submissions"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"


[[bin]]
name="day1_1"
path="bin/day1/task1/main.rs"

[[bin]]
name="day1_2"
path="bin/day1/task2/main.rs"

[[bin]]
name="day2_1"
path="bin/day2/task1/main.rs"

[[bin]]
name="day2_2"
path="bin/day2/task2/main.rs"

[[bin]]
name="day3_1"
path="bin/day3/task1/main.rs"

[[bin]]
name="day3_2"
path="bin/day3/task2/main.rs"

[[bin]]
name="day4_1"
path="bin/day4/task1/main.rs"

[[bin]]
name="day4_2"
path="bin/day4/task2/main.rs"

[[bin]]
name="day5_1"
path="bin/day5/task1/main.rs"

[[bin]]
name="day5_2"
path="bin/day5/task2/main.rs"

[[bin]]
name="day6_1"
path="bin/day6/task1/main.rs"

[[bin]]
name="day6_2"
path="bin/day6/task2/main.rs"

[[bin]]
name="day7_1"
path="bin/day7/task1/main.rs"

[[bin]]
name="day7_2"
path="bin/day7/task2/main.rs"

[[bin]]
name="day8_1"
path="bin/day8/task1/main.rs"

[[bin]]
name="day8_2"
path="bin/day8/task2/main.rs"

[[bin]]
name="day9_1"
path="bin/day9/task1/main.rs"

[[bin]]
name="day9_2"
path="bin/day9/task2/main.rs"

[[bin]]
name="day10_1"
path="bin/day10/task1/main.rs"

[[bin]]
name="day10_2"
path="bin/day10/task2/main.rs"


[[bin]]
name="day11_1"
path="bin/day11/task1/main.rs"